# aichallenge-2024

./: .cspell.json  memo
.github/: CODEOWNERS
.github/workflows/: spell-check.yaml
aichallenge/workspace/src/aichallenge_submit/aichallenge_submit_launch/launch/: aichallenge_submit.launch.xml  reference.launch.xml
aichallenge/workspace/src/aichallenge_submit/booars_launch/launch/: booars.launch.xml
aichallenge/workspace/src/aichallenge_submit/booars_utils/: package.xml
aichallenge/workspace/src/aichallenge_submit/control/ackermann_control_publisher/: package.xml
aichallenge/workspace/src/aichallenge_submit/costmap/cached_lanelet_costmap/: package.xml
aichallenge/workspace/src/aichallenge_submit/costmap_generator/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/costmap_generator/config/costmap_generator/: global_costmap_generator.param.yaml
aichallenge/workspace/src/aichallenge_submit/costmap_generator/include/costmap_generator/: costmap_parameters.hpp  global_costmap_generator.hpp
aichallenge/workspace/src/aichallenge_submit/costmap_generator/launch/: costmap_generator.launch.xml
aichallenge/workspace/src/aichallenge_submit/costmap_generator/launch/costmap_generator/: global_costmap_generator.launch.xml
aichallenge/workspace/src/aichallenge_submit/costmap_generator/src/: global_costmap_generator.cpp
aichallenge/workspace/src/aichallenge_submit/goal_pose_setter/config/: default_goal_pose.param.yaml
aichallenge/workspace/src/aichallenge_submit/goal_pose_setter/src/: goal_pose_setter_node.cpp
vehicle/: run_zenoh.bash  zenoh.json5
(+28 files in other folders)
